syntax = "proto3";

option go_package = "runtime/dfs/proto";

service FileReader {
    rpc ReadFile(FileRequest) returns (stream ReadReply) {}
    rpc ReadNewLine(FileRequest) returns (ReadReply) {}
    rpc ReadFileFull(FileRequest) returns (ReadReply) {}
}

message FileRequest {
    string path = 1;
}

message ReadReply {
    bytes buffer = 1;
}
